--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "gulp-uglify": "^2.0.0",
     "jshint": "^2.9.4",
     "vinyl-source-stream": "^1.1.0",
-    "gulp-exec": "2.1.2",
-    "express": "4.14.0",
-    "gulp-nodemon": "2.2.1"
+    "gulp-exec": "^2.1.2",
+    "express": "^4.14.0",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-clean": "0.3.2"
   }
 }
